--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "baton",
+  "name": "relay-baton",
   "version": "1.0.0",
-  "description": "Mongoose-relay schema builder",
+  "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,10 +15,13 @@
   "author": "Sig Rinde <sigurdr@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "callsite": "^1.0.0",
     "graphql": "^0.8.1",
     "graphql-relay": "^0.4.3",
     "lodash": "^4.16.6",
-    "mongoose": "^4.6.7"
+    "mongoose": "^4.6.7",
+    "react-relay": "^0.9.3",
+    "uws": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
