--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relay-baton",
-  "version": "1.0.3",
+  "version": "1.0.17",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "main": "lib/index.js",
   "scripts": {
@@ -20,8 +20,10 @@
     "graphql-relay": "^0.4.3",
     "lodash": "^4.16.6",
     "mongoose": "^4.6.7",
-    "react-relay": "^0.9.3",
     "uws": "^0.11.0"
+  },
+  "peerDependencies": {
+    "react-relay": "^0.9.3"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
