--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relay-baton",
-  "version": "1.0.33",
+  "version": "1.0.36",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "main": "lib/index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "graphql-relay": "^0.5.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.0",
+    "pluralize": "^4.0.0",
     "uws": "^0.13.0 || ^0.14.0"
   },
   "devDependencies": {
