--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relay-baton",
-  "version": "1.0.36",
+  "version": "2.1.1",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "main": "lib/index.js",
   "scripts": {
@@ -16,16 +16,22 @@
   "license": "MIT",
   "dependencies": {
     "callsite": "^1.0.0",
-    "graphql": "^0.9.1 || ^0.10.0",
-    "graphql-relay": "^0.5.1",
+    "express-graphql": "^0.6.7",
+    "graphql": "^0.10.5",
+    "graphql-relay": "^0.5.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.0",
+    "multer": "^1.3.0",
     "pluralize": "^4.0.0",
-    "uws": "^0.13.0 || ^0.14.0"
+    "react": "next",
+    "react-relay": "^1.2.0",
+    "relay-runtime": "^1.2.0",
+    "uws": "^0.14.3"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-preset-env": "^1.2.1",
-    "babel-preset-stage-2": "^6.18.0"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
