--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "next",
     "react-relay": "^1.2.0",
     "relay-runtime": "^1.2.0",
+    "rxjs": "^5.5.2",
     "uws": "^0.14.3"
   },
   "devDependencies": {
