--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relay-baton",
-  "version": "2.1.6",
+  "version": "2.1.11",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "main": "lib/index.js",
   "scripts": {
@@ -16,23 +16,25 @@
   "license": "MIT",
   "dependencies": {
     "callsite": "^1.0.0",
-    "express-graphql": "^0.6.7",
-    "graphql": "^0.10.5",
-    "graphql-relay": "^0.5.2",
-    "lodash": "^4.17.4",
-    "mongoose": "^4.9.0",
+    "express-graphql": "^0.6.0 || ^0.5.0",
+    "graphql-relay": "^0.5.0 || ^0.4.0",
+    "lodash": "^4.17.0",
+    "mongoose": "^5.0.0",
     "multer": "^1.3.0",
-    "pluralize": "^4.0.0",
-    "react": "next",
-    "react-relay": "^1.2.0",
+    "pluralize": "^7.0.0",
+    "react": "^16.2.0",
+    "react-relay": "^1.4.0",
     "relay-runtime": "^1.2.0",
-    "rxjs": "^5.5.2",
-    "uws": "^0.14.3"
+    "rxjs": "^5.5.0",
+    "uws": "^9.14.0"
+  },
+  "peerDependencies": {
+    "graphql": "^0.10.0 || ^0.11.0 || ^0.12.0"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-core": "^6.18.0",
+    "babel-preset-env": "^1.2.0",
+    "babel-preset-react": "^6.24.0",
+    "babel-preset-stage-2": "^6.24.0"
   }
 }
