--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relay-baton",
-  "version": "2.1.11",
+  "version": "2.1.16",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "main": "lib/index.js",
   "scripts": {
@@ -22,14 +22,14 @@
     "mongoose": "^5.0.0",
     "multer": "^1.3.0",
     "pluralize": "^7.0.0",
-    "react": "^16.2.0",
-    "react-relay": "^1.4.0",
-    "relay-runtime": "^1.2.0",
+    "react": "^16.0.0 || ^15.0.0",
+    "react-relay": "^1.5.0 || ^1.4.0",
+    "relay-runtime": "^1.5.0 || ^1.4.0",
     "rxjs": "^5.5.0",
     "uws": "^9.14.0"
   },
   "peerDependencies": {
-    "graphql": "^0.10.0 || ^0.11.0 || ^0.12.0"
+    "graphql": "^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
