--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "relay-baton",
-  "version": "2.1.23",
+  "version": "3.0.6",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d build -w"
   },
   "keywords": [
     "mongodb",
     "mongoose",
+    "sequelize",
+    "sql",
     "relay",
     "graphql"
   ],
   "author": "Sig Rinde <sigurdr@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "callsite": "^1.0.0",
     "express-graphql": "^0.6.0 || ^0.5.0",
     "graphql-relay": "^0.5.0 || ^0.4.0",
+    "react-relay": "^1.6.0 || ^1.5.0 || ^1.4.0",
+    "relay-runtime": "^1.6.0 || ^1.5.0 || ^1.4.0",
     "lodash": "^4.17.0",
-    "mongoose": "^5.0.0",
     "multer": "^1.3.0",
-    "pluralize": "^7.0.0",
-    "react-relay": "^1.5.0 || ^1.4.0",
-    "relay-runtime": "^1.5.0 || ^1.4.0",
     "rxjs": "^5.5.0",
     "uws": "^9.14.0"
   },
   "peerDependencies": {
     "graphql": "^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0",
-    "react": "^16.3.1"
+    "react": "^16.3.1",
+    "mongoose": "^5.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
