--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relay-baton",
-  "version": "3.0.8",
+  "version": "3.0.10",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,18 +18,18 @@
   "license": "MIT",
   "dependencies": {
     "express-graphql": "^0.6.0",
+    "graphql": "^0.13.0",
     "graphql-relay": "^0.5.5",
-    "react-relay": "^1.6.0",
-    "relay-runtime": "^1.6.0",
     "lodash": "^4.17.0",
     "multer": "^1.3.0",
+    "react-relay": "^1.6.0",
+    "relay-runtime": "^1.6.0",
     "rxjs": "^5.5.0",
     "uws": "^9.14.0"
   },
   "peerDependencies": {
-    "graphql": "^0.13.0",
-    "react": "^16.3.1",
-    "mongoose": "^5.0.0"
+    "mongoose": "^5.0.0",
+    "react": "^16.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
