--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,12 @@
 {
 	"presets": [
-		["env", { "targets": { "node": "current" } }],
-		"react",
-		"stage-2",
+		["@babel/preset-env", { "targets": { "node": "current" } }],
+		"@babel/preset-react",
+	],
+	"plugins": [
+		"@babel/plugin-transform-destructuring",
+		"@babel/plugin-proposal-object-rest-spread",
+		"@babel/plugin-proposal-class-properties",
+		"@babel/plugin-proposal-export-namespace-from",
 	]
 }
