--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "relay-baton",
-  "version": "3.0.10",
+  "version": "3.0.31",
   "description": "Mongoose & just regular string relay schema builder & helpers & tidbits & stuffs, ooh, and relay subscriptions",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d build -w"
+    "build": "babel src -d build"
   },
   "keywords": [
     "mongodb",
@@ -23,18 +23,23 @@
     "lodash": "^4.17.0",
     "multer": "^1.3.0",
     "react-relay": "^1.6.0",
+    "reconnecting-websocket": "^4.0.0-rc5",
     "relay-runtime": "^1.6.0",
-    "rxjs": "^5.5.0",
-    "uws": "^9.14.0"
+    "rxjs": "^6.2.1",
+    "ws": "^6.0.0"
   },
   "peerDependencies": {
     "mongoose": "^5.0.0",
     "react": "^16.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.18.0",
-    "babel-preset-env": "^1.2.0",
-    "babel-preset-react": "^6.24.0",
-    "babel-preset-stage-2": "^6.24.0"
+    "@babel/cli": "^7.0.0-beta.56",
+    "@babel/core": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.56",
+    "@babel/plugin-transform-destructuring": "^7.0.0-beta.56",
+    "@babel/preset-env": "^7.0.0-beta.56",
+    "@babel/preset-react": "^7.0.0-beta.56"
   }
 }
