--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "Sig Rinde <sigurdr@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "backo": "^1.1.0",
     "cors": "^2.8.4",
     "express-graphql": "^0.6.0",
     "graphql": "^14.0.2",
@@ -26,7 +25,7 @@
     "lodash": "^4.17.0",
     "multer": "^1.3.0",
     "react-relay": "^1.6.0",
-    "reconnecting-websocket": "^4.0.0-rc5",
+    "reconnecting-websocket": "^4.1.0",
     "relay-runtime": "^1.6.0",
     "rxjs": "^6.2.1",
     "ws": "^6.0.0"
