--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d build",
-    "patch": "yarn run build && npm version patch && npm publish"
+    "patch": "yarn run build && git commit -a && git push && npm version patch && npm publish"
   },
   "keywords": [
     "mongodb",
