--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.4",
-    "express-graphql": "^0.6.0",
-    "graphql": "^14.0.2",
-    "graphql-relay": "^0.5.5",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.1.1",
+    "graphql-relay": "^0.6.0",
     "lodash": "^4.17.0",
     "multer": "^1.3.0",
-    "react-relay": "^1.6.0",
+    "react-relay": "^2.0.0",
     "reconnecting-websocket": "^4.1.0",
-    "relay-runtime": "^1.6.0",
+    "relay-runtime": "^2.0.0",
     "rxjs": "^6.2.1",
     "ws": "^6.0.0"
   },
@@ -35,13 +35,13 @@
     "react": "^16.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.56",
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.56",
-    "@babel/plugin-transform-destructuring": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/preset-react": "^7.0.0-beta.56"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-transform-destructuring": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0"
   }
 }
