--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
 	],
 	"plugins": [
 		"@babel/plugin-transform-destructuring",
+		"@babel/plugin-proposal-async-generator-functions",
 		"@babel/plugin-proposal-object-rest-spread",
 		"@babel/plugin-proposal-class-properties",
 		"@babel/plugin-proposal-export-namespace-from",
